my-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connections-backend
  namespace: my-app
  labels:
    app: connections-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: connections-backend
