my-app/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: connections-api
  namespace: my-app
  labels:
    app: connections-backend
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  to:
    kind: Service
    name: connections-backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
