my-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-app
  namespace: my-app
spec:
  to:
    kind: Service
    name: nginx-app
  tls:
    termination: edge
